# Interdomain-Group-C

./: .gitignore  README.md  base_lora.ino  breadcrumbs.json  pipe_map.json  rover_lora.ino.ino
communication/: fake_lora_publisher.py
communication/base_lora/: base_lora.ino  comm_protocol.h  fake_dashboard_simulation.py  gateway_serial_logger.py
communication/base_lora/logs/: received_mission_log.csv  telemetry_log.csv
communication/dashboard/: lora_dashboard.py
communication/rover_lora/: comm_protocol.h  rover_lora.ino
src/pipe_bringup/: package.xml  setup.cfg  setup.py
src/pipe_bringup/config/: ekf_localization.yaml
src/pipe_bringup/hardware_tests/: motor_sensor_test.cpp  motor_test.cpp  ultrasonic_test.cpp
src/pipe_bringup/launch/: hardware.launch.py  start_sim.launch.py  test_complex_maze.launch.py  test_junctions.launch.py.backup  test_navigation.launch.py
src/pipe_bringup/pipe_bringup/: center_between_walls.py  esp32_interface.py  gps_guided_navigator.py  junction_detector.py  junction_detector_hardware.py  topological_mapper.py  ultrasonic_to_odometry.py
src/pipe_bringup/urdf/: pipe_bot.urdf.xacro  pipe_bot.urdf.xacro.backup
src/pipe_bringup/worlds/: complex_maze.world  junction_test.world  l_maze.world  pipe_world.world  simple_test.world  test_corridor.world
