<?xml version="1.0"?>
<package format="3">
  <name>pipe_bringup</name>
  <version>0.0.0</version>
  <description>Pipe rover bringup package</description>
  <maintainer email="your_email@example.com">jayin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

